# arduino_blink_rs

./: Cargo.toml  Justfile  LICENSE  README.md  avr-atmega328p.json  flake.nix
.cargo/: config.toml
src/: main.rs
