[package]
name = "arduino_blink_rs"
version = "0.1.0"
edition = "2018"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "deny"
nursery = "deny"
complexity = "deny"
perf = "deny"
enum_glob_use = { level = "deny", priority = 1 }
single_match_else = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
or_fun_call = { level = "allow", priority = 1 }

[dependencies]
panic-halt = "0.2.0"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
features = ["arduino-uno"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

# [profile.dev]
# opt-level = "s"
# lto = true
# codegen-units = 1
